Salesforce/main/default/objects/CRM_Area_de_Atuacion__c/CRM_Area_de_Atuacion__c.object-meta.xml
<CustomObject>
    <description>Área de atuação. Detalhes de vendas(sacas) por região</description>
    <label>CRM Área de Atuação</label>
    <nameField>
        <label>Nombre de CRM Área de Atuação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Área de Atuação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>