Salesforce/main/default/objects/CRM_Area_de_Atuacion__c/fields/Porcentaje_Vendas__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Vendas__c</fullName>
    <label>Porcentaje Vendas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>