Salesforce/main/default/objects/CRM_Area_de_Atuacion__c/fields/Regi_o__c.field-meta.xml
<CustomField>
    <fullName>Regi_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Região</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Regiao__c.Grupo_de_R__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Regiao__c</referenceTo>
    <relationshipLabel>CRM Área de Atuação</relationshipLabel>
    <relationshipName>CRM_rea_de_Atua_o</relationshipName>
    <type>Lookup</type>
</CustomField>