Salesforce/main/default/objects/CRM_Area_de_Atuacion__c/fields/Sacas__c.field-meta.xml
<CustomField>
    <fullName>Sacas__c</fullName>
    <label>Sacas</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>