Salesforce/main/default/objects/CRM_Area_de_Atuacion__c/fields/Sociedad_SF__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_SF__c</fullName>
    <formula>&apos;BRMX&apos;</formula>
    <label>Sociedad_SF</label>
    <type>Text</type>
</CustomField>