Salesforce/main/default/objects/CRM_Area_de_Atuacion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PLANEAMIENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>